Update of ported copies from modified files in the other repositories